# telegram_runner

./: .gitignore  CLAUDE.md  README.md  config.example.json  install.sh  pyproject.toml  run.sh  tg-send.sh
data/: metadata.db
data/lucene/: segments_1
data/rocksdb/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
src/telegram_harness/: __init__.py  __main__.py  bot.py  config.py  models.py  send_cli.py
src/telegram_harness/commands/: __init__.py  ask.py  review.py  run.py  status.py
